[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
chrono-tz = "0.8.4"
colored = "2.0.4"
indicatif = {version = "0.17.7", features = ["rayon"]}
itertools = "0.12.0"
k9 = "0.11.6"
once_cell = "1.18.0"
rayon = "1.8.0"
reqwest = {version = "0.11", features = ["blocking", "json", "cookies"]}
toml = "0.8.8"
tracing = "0.1.40"
